// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`---> Testing Single Slide of Movies Category Carousel renders correctly when isSubbed and/or isDubbed are NOT present (snapshot testing) 1`] = `
<div>
  <a
    className="link"
    href="/movie/d"
    onClick={[Function]}
  >
    <span
      className="yearSpan"
    >
      0
    </span>
    <img
      alt="poster"
      className="slide"
      src="b"
    />
    <h4
      role="title"
    >
      a
    </h4>
    <h5
      role="eng-title"
    >
      e
    </h5>
    <h5
      role="genre"
    >
      f
    </h5>
  </a>
</div>
`;

exports[`---> Testing Single Slide of Movies Category Carousel renders correctly when isSubbed and/or isDubbed are present (snapshot testing) 1`] = `
<div>
  <a
    className="link"
    href="/movie/d"
    onClick={[Function]}
  >
    <span
      className="yearSpan"
    >
      0
    </span>
    <span
      className="subSpan"
    >
      Dub
    </span>
    <span
      className="dubSpan"
    >
      Sub
    </span>
    <img
      alt="poster"
      className="slide"
      src="b"
    />
    <h4
      role="title"
    >
      a
    </h4>
    <h5
      role="eng-title"
    >
      e
    </h5>
    <h5
      role="genre"
    >
      f
    </h5>
  </a>
</div>
`;
